--- a/example.config.toml
+++ b/example.config.toml
@@ -1,6 +1,6 @@
 # Socket address on which to listen
 listening-address = "0.0.0.0:3000"
-# Duration between two checks of pki folder in milliseconds
+# Duration between two checks of pki directory in milliseconds
 interval = 30_000
 
 [sozu]
@@ -8,8 +8,8 @@ interval = 30_000
 listener = "0.0.0.0:443"
 # Path to Sōzu's configuration file
 configuration = "path/to/sozu/config.toml"
-# Path to pki folder
-pki = "path/to/pki/folder"
+# Path to pki directory
+pki = "path/to/pki/directory"
 
 [sentry]
 # The Data Source Name of our API
